# tycho-searcher

./: .gitignore  Cargo.toml  Peti c++ kod  README.md
doc/: references.bib  searcher_documentation.tex
doc/figures/: graph_all_amm_tvl10.tex  graph_uniswap_tvl10.tex
src/: command_line_parameters.rs  lib.rs  main.rs  readme.md
src/searcher/: arbitrage_save.rs  bellman_ford.rs  graph_components.rs  graph_types.rs  logging.rs  merge_cycles.rs  mod.rs  one_dimensional_optimisation.rs  price_quoter.rs
tests/: test_belmann_ford.rs  test_graph_components.rs  test_quoter.rs
tools/: README.md  graph_analyzer.py
