[package]
name = "tycho-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
ordered-float = "4"
petgraph = "0.6"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dotenv = "0.15"
hex = "0.4"
bytes = "1"
chrono = "0.4"
url = "2.5"


tycho-common = "0.70.7"
tycho-client = "0.70.7"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation" }
tycho-execution = "0.102.0"



[[bin]]
name = "tycho-searcher"
path = "src/main.rs"

[profile.bench]
debug = true

